#	$Id$	

Changelog for HylaFAX

* improved disconnection detection (25, 26 Apr 2005)
* wait longer for partial-page signals (19 Apr 2005)
* adjust the timing of input buffering enabling (15 Apr 2005)
* fix dialtest problem when using parenthesis (1 Apr 2005)
* fix crash when using malformed format strings (1 Apr 2005)
* initialize frameCount for compilers that don't (1 Apr 2005)
* add last-page CRP reception support in Phase D (30 Mar 2005)
* handle TSI, DCS, and other signals when in ECM (29 Mar 2005)
* don't transmit DCN after getting EOT (24 Mar 2005)
* improve the usage of T4 and T2 timers throughout (23 Mar 2005)
* improve some error-handling scenarios (23 Mar 2005)
* improve identification of ECM blocks with zero frames (16 Mar 2005)
* fix potential error in ECM reception frame counting (16 Mar 2005)
* add CRP usage when message frames are received
  corrupt (14,23 Mar 2005)
* add Class1RMPersistence, better ECM +FCERROR handling (14 Mar 2005)
* small fixes for compilation on AMD-64 (14 Mar 2005)
* fix a few timeouts in faxgetty (11 Mar 2005)
* add support for TIFFTAG_FAXDCS (5 Mar 2005)
* fix batching error in ECM to some receivers (5 Mar 2005)
* modify parsing of Class1EnableV34Cmd (5 Mar 2005)
* add configurable support for tiff2pdf from libtiff (2 Mar 2005)
* change the 2 s TCF timeout to use Class1TCFRecvTimeout (2 Mar 2005)
* handle PPS after 4th PPR (2 Mar 2005)
* fix potential error in counting of PPR signals (2 Mar 2005)
* handle EOT after PPS (28 Feb 2005)
* add Class1AdaptRecvCmd config option, AT+FAR=1 support, (28 Feb 2005)
* fix DCS scanline-time error when sending to systems without
  ECM supporting "mixed" scanline-times (24 Feb 2005)
* cause faxsend to log jobs in batches as separate commids (24 Feb 2005)
* change how faxsend is invoked for batches (24 Feb 2005)
* minor fix in notify for mawk (16 Feb 2005)
* fix a false V.34-Fax error message after FTT (16 Feb 2005)
* convert CIDName/CIDNumber to CallID (14 Feb 2005)